src/objects/Trust_Badge__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Approve_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Approve Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge_Description_Example__c</fullName>
        <label>Badge Description / Example</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Image_URL__c</fullName>
        <label>Badge Image URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Image__c</fullName>
        <formula>IF(
  LEN(Badge_Image_URL__c) &gt; 0,
  IMAGE(Badge_Image_URL__c, Name, 75, 75),
  IMAGE(&apos;&apos;, Name, 75, 75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Badge Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Points__c</fullName>
        <label>Max Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Points__c</fullName>
        <label>Min Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RenderDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RenderDescription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trust_Points__c</fullName>
        <label>Trust Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trust_Use_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trust Use Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Trust Badge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Badge_Description_Example__c</columns>
        <columns>Badge_Image__c</columns>
        <columns>Trust_Use_Only__c</columns>
        <columns>Auto_Approve_Allowed__c</columns>
        <columns>Trust_Points__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllActiveBadges</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Badge_Description_Example__c</columns>
        <columns>Badge_Image__c</columns>
        <columns>Trust_Use_Only__c</columns>
        <columns>Auto_Approve_Allowed__c</columns>
        <columns>Trust_Points__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Badges</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveBadges</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Badge_Description_Example__c</columns>
        <columns>Badge_Image__c</columns>
        <columns>Trust_Use_Only__c</columns>
        <columns>Auto_Approve_Allowed__c</columns>
        <columns>Trust_Points__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Badges</label>
    </listViews>
    <listViews>
        <fullName>Employee_Submit_Badges</fullName>
        <columns>NAME</columns>
        <columns>Badge_Image__c</columns>
        <columns>Trust_Use_Only__c</columns>
        <columns>Auto_Approve_Allowed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trust_Use_Only__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Employee Submit Badges</label>
    </listViews>
    <listViews>
        <fullName>Trust_Only_Badges</fullName>
        <columns>NAME</columns>
        <columns>Badge_Image__c</columns>
        <columns>Trust_Use_Only__c</columns>
        <columns>Auto_Approve_Allowed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trust_Use_Only__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Trust Only Badges</label>
    </listViews>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trust Badges</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Needs_Badge_Image_URL</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( Badge_Image_URL__c )</errorConditionFormula>
        <errorDisplayField>Badge_Image_URL__c</errorDisplayField>
        <errorMessage>Badge Image URL is required when creating or saving a badge.</errorMessage>
    </validationRules>
</CustomObject>